# NISQA

./: .gitignore  LICENSE  LICENSE_CC-BY-NC-ND-4.0  NISQA_lib.py  NISQA_model.py  README.md  env-macos-arm.yml  env-macos-x86-rosetta.yml  env-macos-x86.yml  env.yml  finetune_nisqa.yaml  finetune_nisqa_multidimensional.yaml  nisqa.tar  nisqa_mos_only.tar  nisqa_tts.tar  pyproject.toml  requirements.txt  run_evaluate.py  run_meta_eval.py  run_nisqa.py  run_predict.py  run_predict_batch.sh  run_train.py
config/: finetune_nisqa.yaml  finetune_nisqa_multidimensional.yaml  train_nisqa_cnn_lstm_avg.yaml  train_nisqa_cnn_sa_ap.yaml  train_nisqa_double_ended.yaml
eval_config/: big_utts.csv  processed_utts.txt  speakers.txt
nisqa/: NISQA_lib.py  NISQA_model.py
to_evaluate/results/naturalness/Bernd/: NISQA_results.csv
to_evaluate/results/quality/Bernd/: NISQA_results.csv
