[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nisqa"
version = "2.0-2"
description = "NISQA - Non-Intrusive Speech Quality and TTS Naturalness Assessment"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow==10.2.0",
    "torch==2.2.1",
    "scipy==1.12.0",
    "torchvision==0.17.1",
    "librosa==0.10.1",
    "matplotlib==3.8.3",
    "numba==0.59.0",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "pyyaml==6.0.1",
    "scikit-learn==1.4.1.post1",
    "seaborn==0.13.2",
    "tqdm==4.66.2"
]

[project.urls]
Homepage = "https://github.com/gabrielmittag/NISQA"
Issues = "https://github.com/gabrielmittag/NISQA/issues"

[tool.setuptools.packages.find]
include = ["nisqa"]